Add u.com footer + hide global nav on scroll past

--- a/docs/examples/templates/canonical-ubuntu-navs.html
+++ b/docs/examples/templates/canonical-ubuntu-navs.html
@@ -970,7 +970,7 @@ category: _templates
     </div>
   </section>
 
-  <section class="p-strip">
+  <section class="p-strip is-bordered">
     <div class="row">
       <div class="col-12">
         <ul class="p-matrix">
@@ -1016,41 +1016,238 @@ category: _templates
       <p><a class="p-button--positive js-invoke-modal" href="/internet-of-things/contact-us">Get in touch</a></p>
     </div>
   </section>
-  <div class="p-strip p-contextual-footer">
-  <div class="row">
-    <div class="p-divider">
-      <div class="col-4 p-divider__block">
-        <h3 class="p-heading--four">Learn more</h3>
-        <p>You can start your Ubuntu Core journey by either reading or asking.</p>
-        <p><a href="http://docs.ubuntu.com/core" class="p-link--external" onclick="dataLayer.push({'event' : 'GAEvent', 'eventCategory' : 'Contextual footer link', 'eventAction' : 'docs.ubuntu.com/core', 'eventLabel' : 'Ubuntu Core Docs', 'eventValue' : undefined });">Read
-            the docs</a></p>
-        <p><a href="http://askubuntu.com/search?q=snap" class="p-link--external" onclick="dataLayer.push({'event' : 'GAEvent', 'eventCategory' : 'Contextual footer link', 'eventAction' : 'ask.ubuntu.com', 'eventLabel' : 'ask.ubuntu.com', 'eventValue' : undefined });">Visit
-            ask.ubuntu.com</a></p>
-      </div>
-      <div class="col-4 p-divider__block">
-        <h3 class="p-heading--four">Contribute</h3>
-        <p>Add to Ubuntu Core.</p>
-        <p><a href="https://snapcraft.io/first-snap" class="p-link--external" onclick="dataLayer.push({'event' : 'GAEvent', 'eventCategory' : 'Contextual footer link', 'eventAction' : 'snapcraft.io/docs/build-snaps/your-first-snap', 'eventLabel' : 'Contribute to Ubuntu Core', 'eventValue' : undefined });">Learn
-            how to create a snap</a></p>
-        <p><a href="https://github.com/snapcore/snapd" class="p-link--external" onclick="dataLayer.push({'event' : 'GAEvent', 'eventCategory' : 'Contextual footer link', 'eventAction' : 'github.com/snapcore/snapd', 'eventLabel' : 'Contribute to Ubuntu Core', 'eventValue' : undefined });">Check
-            out the project on GitHub</a></p>
-      </div>
-      <div class="col-4 p-divider__block">
-        <h3 class="p-heading--four">Further reading</h3>
-        <ul class="p-list">
-          <li class="p-list__item"><a href="https://blog.ubuntu.com/2019/06/04/debug-acpi-tables-with-firmware-test-suite-fwts/">Debug
-              ACPI Tables with Firmware Test Suite (FWTS)&nbsp;›</a></li>
-          <li class="p-list__item"><a href="https://blog.ubuntu.com/2019/05/07/web-and-design-team-summary-7-may-2019/">Web
-              and Design team summary – 7 May 2019&nbsp;›</a></li>
-          <li class="p-list__item"><a href="https://blog.ubuntu.com/2019/04/26/an-introduction-to-apparmor/">An introduction
-              to AppArmor&nbsp;›</a></li>
-          <li class="p-list__item"><a href="https://blog.ubuntu.com/2019/04/26/ubuntu-is-1-for-embedded-iot/">Ubuntu is the
-              #1 embedded Linux for IoT&nbsp;›</a></li>
-        </ul>
+  <div class="p-strip is-bordered p-contextual-footer">
+    <div class="row">
+      <div class="p-divider">
+        <div class="col-4 p-divider__block">
+          <h3 class="p-heading--four">Learn more</h3>
+          <p>You can start your Ubuntu Core journey by either reading or asking.</p>
+          <p><a href="http://docs.ubuntu.com/core" class="p-link--external" onclick="dataLayer.push({'event' : 'GAEvent', 'eventCategory' : 'Contextual footer link', 'eventAction' : 'docs.ubuntu.com/core', 'eventLabel' : 'Ubuntu Core Docs', 'eventValue' : undefined });">Read
+              the docs</a></p>
+          <p><a href="http://askubuntu.com/search?q=snap" class="p-link--external" onclick="dataLayer.push({'event' : 'GAEvent', 'eventCategory' : 'Contextual footer link', 'eventAction' : 'ask.ubuntu.com', 'eventLabel' : 'ask.ubuntu.com', 'eventValue' : undefined });">Visit
+              ask.ubuntu.com</a></p>
+        </div>
+        <div class="col-4 p-divider__block">
+          <h3 class="p-heading--four">Contribute</h3>
+          <p>Add to Ubuntu Core.</p>
+          <p><a href="https://snapcraft.io/first-snap" class="p-link--external" onclick="dataLayer.push({'event' : 'GAEvent', 'eventCategory' : 'Contextual footer link', 'eventAction' : 'snapcraft.io/docs/build-snaps/your-first-snap', 'eventLabel' : 'Contribute to Ubuntu Core', 'eventValue' : undefined });">Learn
+              how to create a snap</a></p>
+          <p><a href="https://github.com/snapcore/snapd" class="p-link--external" onclick="dataLayer.push({'event' : 'GAEvent', 'eventCategory' : 'Contextual footer link', 'eventAction' : 'github.com/snapcore/snapd', 'eventLabel' : 'Contribute to Ubuntu Core', 'eventValue' : undefined });">Check
+              out the project on GitHub</a></p>
+        </div>
+        <div class="col-4 p-divider__block">
+          <h3 class="p-heading--four">Further reading</h3>
+          <ul class="p-list">
+            <li class="p-list__item"><a href="https://blog.ubuntu.com/2019/06/04/debug-acpi-tables-with-firmware-test-suite-fwts/">Debug
+                ACPI Tables with Firmware Test Suite (FWTS)&nbsp;›</a></li>
+            <li class="p-list__item"><a href="https://blog.ubuntu.com/2019/05/07/web-and-design-team-summary-7-may-2019/">Web
+                and Design team summary – 7 May 2019&nbsp;›</a></li>
+            <li class="p-list__item"><a href="https://blog.ubuntu.com/2019/04/26/an-introduction-to-apparmor/">An introduction
+                to AppArmor&nbsp;›</a></li>
+            <li class="p-list__item"><a href="https://blog.ubuntu.com/2019/04/26/ubuntu-is-1-for-embedded-iot/">Ubuntu is the
+                #1 embedded Linux for IoT&nbsp;›</a></li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
-  </div>
+  <footer class="p-footer p-strip u-clearfix">
+    <div class="row p-footer__container">
+      <p class="u-hide--medium u-hide--large link-to-top"><a href="#"><small>Back to top</small></a></p>
+      <nav id="main-navigation" class="p-footer__nav u-clearfix">
+        <div class="p-footer__nav-col col-2 u-no-margin--bottom">
+          <ul class="p-footer__links">
+            <li class="p-footer__item">
+              <h2 class="p-footer__title">
+                <a class="p-link--soft" href="/openstack">OpenStack</a>
+              </h2>
+              <ul class="second-level-nav">
+                <li class="p-footer-list--margin"><a href="/openstack/what-is-openstack">What is OpenStack</a></li>
+                <li class="p-footer-list--margin"><a href="/openstack/features">Features</a></li>
+                <li class="p-footer-list--margin"><a href="/openstack/managed">Managed</a></li>
+                <li class="p-footer-list--margin"><a href="/openstack/consulting">Consulting</a></li>
+                <li class="p-footer-list--margin"><a href="/openstack/training">Training</a></li>
+                <li class="p-footer-list--margin"><a href="/openstack/storage">Storage</a></li>
+                <li class="p-footer-list--margin"><a href="/openstack/install">Install</a></li>
+                <li class="p-footer-list--margin"><a href="/openstack/partners">Partners</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="p-footer__nav-col col-2 u-no-margin--bottom">
+          <ul class="p-footer__links">
+            <li class="p-footer__item">
+              <h2 class="p-footer__title">
+                <a class="p-link--soft" href="/kubernetes">Kubernetes</a>
+              </h2>
+              <ul class="second-level-nav">
+                <li class="p-footer-list--margin"><a href="/kubernetes/features">Features</a></li>
+                <li class="p-footer-list--margin"><a href="/kubernetes/managed">Managed</a></li>
+                <li class="p-footer-list--margin"><a href="/kubernetes/install">Install</a></li>
+                <li class="p-footer-list--margin"><a href="/kubernetes/partners">Partners</a></li>
+                <li class="p-footer-list--margin"><a href="/kubernetes/docs">Docs</a></li>
+              </ul>
+            </li>
+            <li class="p-footer__item">
+              <h2 class="p-footer__title">
+                <a class="p-link--soft" href="/ai">AI</a>
+              </h2>
+              <ul class="second-level-nav">
+                <li class="p-footer-list--margin"><a href="/ai/features">Features</a></li>
+                <li class="p-footer-list--margin"><a href="/ai/install">Install</a></li>
+                <li class="p-footer-list--margin"><a href="/ai/consulting">Consulting</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="p-footer__nav-col col-2 u-no-margin--bottom">
+          <ul class="p-footer__links">
+            <li class="p-footer__item">
+              <h2 class="p-footer__title">
+                <a class="p-link--soft" href="/desktop">Desktop</a>
+              </h2>
+              <ul class="second-level-nav">
+                <li class="p-footer-list--margin"><a href="/desktop/features">Features</a></li>
+                <li class="p-footer-list--margin"><a href="/desktop/organisations">Organisations</a></li>
+                <li class="p-footer-list--margin"><a href="/desktop/developers">Developers</a></li>
+                <li class="p-footer-list--margin"><a href="/desktop/partners">Partners</a></li>
+                <li class="p-footer-list--margin"><a href="/desktop/statistics">Statistics</a></li>
+              </ul>
+            </li>
+            <li class="p-footer__item">
+              <h2 class="p-footer__title">
+                <a class="p-link--soft" href="/server">Server</a>
+              </h2>
+              <ul class="second-level-nav">
+                <li class="p-footer-list--margin"><a href="/server/hyperscale">Hyperscale</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="p-footer__nav-col col-2 u-no-margin--bottom">
+          <ul class="p-footer__links">
+            <li class="p-footer__item">
+              <h2 class="p-footer__title">
+                <a class="p-link--soft" href="/internet-of-things">IoT</a>
+              </h2>
+              <ul class="second-level-nav">
+                <li class="p-footer-list--margin"><a href="/internet-of-things/digital-signage">Digital signage</a></li>
+                <li class="p-footer-list--margin"><a href="/internet-of-things/robotics">Robotics</a></li>
+                <li class="p-footer-list--margin"><a href="/internet-of-things/gateways">Gateways</a></li>
+                <li class="p-footer-list--margin"><a href="/internet-of-things/appstore">App store</a></li>
+                <li class="p-footer-list--margin"><a href="/embedded">Embedded Linux</a></li>
+              </ul>
+            </li>
+            <li class="p-footer__item">
+              <h2 class="p-footer__title">
+                <a class="p-link--soft" href="/support">Support</a>
+              </h2>
+              <ul class="second-level-nav">
+                <li class="p-footer-list--margin"><a href="/support/plans-and-pricing">Pricing</a></li>
+                <li class="p-footer-list--margin"><a href="/support/community-support">Community support</a></li>
+                <li class="p-footer-list--margin"><a href="/esm">ESM</a></li>
+                <li class="p-footer-list--margin"><a href="/livepatch">Livepatch</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="p-footer__nav-col col-2 u-no-margin--bottom">
+          <ul class="p-footer__links">
+            <li class="p-footer__item">
+              <h2 class="p-footer__title">
+                <a class="p-link--soft" href="/download">Downloads</a>
+              </h2>
+              <ul class="second-level-nav">
+                <li class="p-footer-list--margin"><a href="/download/cloud">Cloud</a></li>
+                <li class="p-footer-list--margin"><a href="/download/iot">IoT</a></li>
+                <li class="p-footer-list--margin"><a href="/download/server">Server</a></li>
+                <li class="p-footer-list--margin"><a href="/download/desktop">Desktop</a></li>
+                <li class="p-footer-list--margin"><a href="/download/alternative-downloads">Alternative downloads</a></li>
+                <li class="p-footer-list--margin"><a href="/download/flavours">Ubuntu flavours</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="p-footer__nav-col col-2 u-no-margin--bottom last-col">
+          <ul class="p-footer__links">
+            <li class="p-footer__item p-footer__item--spaced">
+              <h2 class="p-footer__title p-footer__title-text">
+                <span>Sectors</span>
+              </h2>
+              <ul class="second-level-nav">
+                <li class="p-footer-list--margin"><a href="/telecommunications">Telco</a></li>
+                <li class="p-footer-list--margin"><a href="/financial-services">Finance</a></li>
+                <li class="p-footer-list--margin"><a href="/internet-of-things/digital-signage">Signage</a></li>
+                <li class="p-footer-list--margin"><a href="/internet-of-things/robotics">Robotics</a></li>
+                <li class="p-footer-list--margin"><a href="/internet-of-things/gateways">Gateways</a></li>
+                <li class="p-footer-list--margin"><a href="/desktop/organisations">Organisations</a></li>
+              </ul>
+            </li>
+            <ul class="second-level-nav second-level-nav-small">
+              <li class="p-footer-list--margin p-footer-list-single-child">
+                <a class="p-link--soft" href="/security"><small>Security</small></a>
+              </li>
+              <li class="p-footer-list--margin p-footer-list-single-child">
+                <a class="p-link--soft" href="/public-cloud"><small>Public cloud</small></a>
+              </li>
+              <li class="p-footer-list--margin p-footer-list-single-child">
+                <a class="p-link--soft" href="/containers"><small>Containers</small></a>
+              </li>
+              <li class="p-footer-list--margin p-footer-list-single-child">
+                <a class="p-link--soft" href="/core"><small>Core</small></a>
+              </li>
+              <li class="p-footer-list--margin p-footer-list-single-child">
+                <a class="p-link--soft" href="/resources"><small>Resources</small></a>
+              </li>
+            </ul>
+          </ul>
+        </div>
+      </nav>
+      <hr class="p-footer__divider">
+      <div class="p-footer--secondary">
+        <div class="col-7">
+          <nav>
+            <ul class="p-inline-list">
+              <li class="u-hide--small p-inline-list__item">
+                <a class="p-button--neutral js-invoke-modal" href="/contact-us"><small>Contact us</small></a>
+              </li>
+              <li class="u-hide--medium u-hide--large p-inline-list__item">
+                <a class="p-link--soft" href="/contact-us"><small>Contact us</small></a>
+              </li>
+              <li class="p-inline-list__item">
+                <a class="p-link--soft" href="/about"><small>About us</small></a>
+              </li>
+              <li class="p-inline-list__item">
+                <a class="p-link--soft" href="/community"><small>Community</small></a>
+              </li>
+              <li class="p-inline-list__item">
+                <a class="p-link--soft" href="http://www.canonical.com/careers"><small>Careers</small></a>
+              </li>
+              <li class="p-inline-list__item">
+                <a class="p-link--soft" href="https://blog.ubuntu.com/press-centre"><small>Press centre</small></a>
+              </li>
+            </ul>
+          </nav>
+          <p class="p-footer--secondary__content"><small>© 2019 Canonical Ltd. Ubuntu and Canonical are registered trademarks
+              of Canonical Ltd.</small></p>
+          <nav>
+            <ul class="p-inline-list--middot u-no-margin--bottom">
+              <li class="p-inline-list__item">
+                <a class="p-link--soft" accesskey="8" href="/legal"><small>Legal information</small></a>
+              </li>
+              <li class="p-inline-list__item">
+                <a class="p-link--soft" accesskey="9" href="/legal/data-privacy"><small>Data privacy</small></a>
+              </li>
+              <li class="p-inline-list__item">
+                <a class="p-link--soft" href="https://github.com/canonical-websites/www.ubuntu.com/issues/new?body=%0a%0a%0a---%0a*Reported%20from:%20https://ubuntu.com/*"
+                  id="report-a-bug"><small>Report a bug on this site</small></a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </footer>
 
 
   <style>
@@ -1223,13 +1420,16 @@ category: _templates
       if (scrollPos > (canonicalContent2.offsetTop - (window.innerHeight * 2)) && scrollPos < (canonicalContent2.offsetTop - window.innerHeight / 2)) {
         globalNav.classList.remove('gn-small');
         globalNav.classList.add('gn-hidden');
+      } else if (scrollPos > (canonicalContent2.offsetTop + window.innerHeight / 2)) {
+        globalNav.classList.add('gn-hidden');
       } else if (scrollPos > (canonicalContent2.offsetTop - window.innerHeight / 2)) {
         globalNav.classList.remove('gn-hidden');
+        globalNav.classList.remove('gn-small');
       } else {
         globalNav.classList.add('gn-small');
       }
     } else {
-      if (scrollPos > (canonicalContent2.offsetTop - window.innerHeight / 2)) {
+      if (scrollPos > (canonicalContent2.offsetTop - window.innerHeight / 2) && scrollPos < (canonicalContent2.offsetTop + window.innerHeight / 2)) {
         globalNav.classList.remove('gn-small');
       } else {
         globalNav.classList.add('gn-small');
