address feedback on #2384 (part 1)

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -89,7 +89,7 @@
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/grid/' %}is-active{% endif %}" href="/patterns/grid/">Grid</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/patterns/strip/' %}is-active{% endif %}" href="/patterns/strip/">Strip</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/settings/layout-settings/' %}is-active{% endif %}" href="/settings/layout-settings/">Structure</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/settings/spacing-settings/' %}is-active{% endif %}" href="/settings/table-layout/">Table layout</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/settings/table-layout/' %}is-active{% endif %}" href="/settings/table-layout/">Table layout</a></li>
                 </ul>
               </li>
 
