add important to rules

--- a/scss/_utilities_layout.scss
+++ b/scss/_utilities_layout.scss
@@ -7,11 +7,11 @@
 
   @if ($table-layout-fixed = 'true') {
     .u-table-layout--auto {
-      table-layout: auto;
+      table-layout: auto !important;
     }
   } @else {
     .u-table-layout--fixed {
-      table-layout: fixed;
+      table-layout: fixed !important;
     }
   }
 }
