--- a/scss/_vanilla.scss
+++ b/scss/_vanilla.scss
@@ -20,6 +20,7 @@
 @import 'patterns_icons';
 @import 'patterns_image';
 @import 'patterns_inline-images';
+@import 'patterns_label';
 @import 'patterns_links';
 @import 'patterns_list-tree';
 @import 'patterns_lists';
@@ -34,7 +35,6 @@
 @import 'patterns_pull-quotes';
 @import 'patterns_search-box';
 @import 'patterns_slider';
-@import 'patterns_status';
 @import 'patterns_strip';
 @import 'patterns_switch';
 @import 'patterns_table-expanding';
@@ -86,6 +86,7 @@
   @include vf-p-icons;
   @include vf-p-image;
   @include vf-p-inline-images;
+  @include vf-p-label;
   @include vf-p-links;
   @include vf-p-list-tree;
   @include vf-p-lists;
@@ -100,7 +101,6 @@
   @include vf-p-pull-quotes;
   @include vf-p-search-box;
   @include vf-p-slider;
-  @include vf-p-status;
   @include vf-p-strip;
   @include vf-p-switch;
   @include vf-p-table-expanding;
