Update font-size and paddings

--- a/scss/_patterns_label.scss
+++ b/scss/_patterns_label.scss
@@ -12,9 +12,9 @@
 %vf-label {
   border-radius: 0.125rem;
   display: inline-block;
-  font-size: 1rem;
-  line-height: 1.5rem;
-  padding: calc(#{$spv-nudge - $sp-unit * 0.5} - 1px) $sph-inner--small * 1.5;
+  font-size: 0.875rem;
+  line-height: 1.3125rem;
+  padding: calc(#{$sp-unit * 0.625} - 1px) $sph-inner--small * 1;
   text-align: center;
   text-decoration: none;
 }
