Add link in sidebar navigation

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -155,6 +155,7 @@
               <li class="p-sidebar-nav__item">
                 <strong>Resources</strong>
                 <ul class="p-sidebar-nav__list">
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/component-status/' %}is-active{% endif %}" href="/component-status/">Component status</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/examples/' %}is-active{% endif %}" href="/examples/">All component examples</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == 'https://assets.ubuntu.com/latest-redirects/vanilla-framework.sketch' %}is-active{% endif %}" href="https://assets.ubuntu.com/latest-redirects/vanilla-framework.sketch">Download the Sketch UI Kit</a></li>
                 </ul>
