fix build, broken $table-layout-fixed

--- a/scss/_utilities_layout.scss
+++ b/scss/_utilities_layout.scss
@@ -5,7 +5,7 @@
     @extend %fixed-width-container;
   }
 
-  @if ($table-layout-fixed = 'true') {
+  @if ($table-layout-fixed == 'true') {
     .u-table-layout--auto {
       table-layout: auto !important;
     }
